--- a/about.html
+++ b/about.html
@@ -29,8 +29,18 @@
                         text-decoration: none;;
                     }
             #content{
-                padding: 70% 0;
+                /* padding: 70% 0; */
+                display: flex;
             }
+                .exhibit{
+                    width: 80%;
+                    height: 100%;
+                    border: 1px solid black;
+                    align-self: center;
+                }
+                .exhibit img{
+                    width: 30%;
+                }
             #footer{
                 padding: 5% 0;
             }
@@ -52,7 +62,10 @@
         </div>
     </div>
     <div id="content">
-
+        <div class="exhibit">
+            <img src="images/print 1.png">
+            <img src="images/print 2.png">
+        </div>
     </div>
     <div id="footer">
 
