--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
             .moving{
                 position: absolute;
             }
-                .sticker1{top: 90%;}
+            /* @keyframes stickers{
+                100%{
+                    transform: rotate(360);
+                }
+            }
+                .sticker1{
+                    top: 90%; 
+                    
+                } */
             body{
                 display: grid;
                 grid-template-rows: auto auto auto;
@@ -79,7 +87,7 @@
                 #dat2{
                     padding: 0 0 0 5%;
                 }
-                #dat2 h1, p{
+                #dat2 h1,#dat2 p{
                     animation: onloadanimheader 0.7s ease-in-out;
                 }
                 /* #dat3{padding: 0 0;} */
