--- a/index.html
+++ b/index.html
@@ -114,11 +114,18 @@
                 padding: 10% 0%;
                 display: grid;
                 grid-template: '.image' '.text';
+                background-image: url("images/paper textureh.jpg");
+                background-repeat: no-repeat;
+                background-size: cover;
             }
                 .image{
-                    /* padding: 30% 20%; */
+                    border: 1px solid black;
                 }
+                    .image img{
+                        border: 1px solid black;
+                    }
                 .text{
+                    border: 1px solid black;
                     padding: 5% 5%;
                 }
             /* .footer {padding: 5% 0;} */
@@ -159,11 +166,11 @@
     </div>
     <div class="content">
         <div class="image">
-            <img src="images/annonymous (2).png" width="80%">
+            <img src="images/annonymous (2).png" width="100%">
         </div>
         <div class="text">
-            <h1>Artist's Statement</h1>
-            <hr/>
+            <h1 style="font-size: 50px;">Artist's Statement</h1>
+            <hr style="border: 2px solid black; border-radius: 3px;"/>
             <p>
                 A sense of hopelessness, pressure, and
                 despair— Flea in a jar is an experiment
